--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,14 @@ jinja2 = "^3.1.5"
 pytest-asyncio = "^0.24.0"
 pytest-cov = "^6.0.0"
 pytest = "^8.3.3"
+pytest-benchmark = "^4.0.0"
 fastapi-profiler = "^1.4.1"
 respx = "^0.21.1"
 ruff = "^0.7.1"
 mypy = "^1.13.0"
 pre-commit = "^4.0.1"
 types-redis = "^4.6.0"
+secp256k1 = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
